# pyGigEVision

./: .gitignore  AGENTS.md  CONTRIBUTING.rst  LICENSE  PYPI_README.rst  README.rst  pyproject.toml  requirements.txt  sync_version.py
.github/workflows/: release-and-publish-to-pypi.yml  test.yml
docs/source/: api.rst  changelog.rst  conf.py  examples.rst  getting_started.rst  index.rst  protocol.rst
docs/source/_static/: ai-buttons.js
examples/: 01_discover.py  02_bootstrap_and_xml.py  03_grab_one_frame.py  README.rst
pyGigEVision/: __init__.py  bootstrap.py  genicam.py  gvcp.py  gvsp.py  standard.py
src/pyGigEVision/: __init__.py  gvcp.py  gvsp.py
tests/: conftest.py  test_bootstrap.py  test_discovery.py  test_forceip.py  test_genicam.py  test_gvcp.py  test_gvsp.py  test_public_api.py  test_standard.py
