[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyGigEVision"
version = "0.1.1"
description = "Pure-Python implementation of the GigE Vision protocol (GVCP + GVSP)."
license = "MIT"
requires-python = ">=3.10"
readme = "PYPI_README.rst"
authors = [
    { name = "Jaša Šonc", email = "jasa.sonc@fs.uni-lj.si" },
    { name = "Janko Slavič", email = "janko.slavic@fs.uni-lj.si" },
]
maintainers = [
    { name = "Jaša Šonc" },
    { name = "Lorenzo Capponi" },
    { name = "Janko Slavič" },
]
keywords = ["gige", "gigevision", "machine vision", "camera", "industrial", "GVCP", "GVSP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "numpy>=1.20",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-copybutton>=0.5.2",
    "sphinx-llms-txt",
    "sphinx-markdown-builder",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "wheel",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ladisk/pyGigEVision"
Documentation = "https://pygigevision.readthedocs.io"
Repository = "https://github.com/ladisk/pyGigEVision"
Issues = "https://github.com/ladisk/pyGigEVision/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "N999"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.sdist]
include = [
    "pyGigEVision/",
    "tests/",
    "docs/",
    "examples/",
    "README.rst",
    "PYPI_README.rst",
    "AGENTS.md",
    "LICENSE",
    "CONTRIBUTING.rst",
    "pyproject.toml",
    "requirements.txt",
    "requirements.dev.txt",
    "sync_version.py",
]

[tool.hatch.build.targets.wheel]
packages = ["pyGigEVision"]
